--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       <div class='pure-u-1-4' id='carrito'></div>
     </div>
     <footer class="pure-g borde">
-      <section class="pure-u-1-3"><a href="#about">quienes somos</a></section>
+      <section class="pure-u-1-3"><a href="#quienesSomos">quienes somos</a></section>
       <section class="pure-u-1-3"><a href='#atencionAlCliente'>atención al cliente</a></section>
-      <section class="pure-u-1-3"><a href='#legal'>aspectos legales</a></section>
+      <section class="pure-u-1-3"><a href='#legal/1'>aspectos legales</a></section>
     </footer>
     <!-- Plantilla (template) del menú de categorías -->
     <script type="text/template" id="listado_categorias">
@@ -100,13 +100,13 @@
     </script>
     <!-- Plantillas con el contenido de la ayuda -->
     <script type="text/template" id='ayuda_1'>
-      <div class="ayuda">
-        <h3 class="little_title_ayuda">Cuestión 1</h3>
+      <div class="cuadro_texto">
+        <h3 class="little_title_gen">Cuestión 1</h3>
         <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In arcu dui, pulvinar rutrum fringilla elementum, sodales id tellus. Duis pellentesque dolor in neque volutpat mattis. Fusce tempus metus non quam pellentesque, vitae porta mauris malesuada. Nullam mi lorem, sagittis vitae nulla quis, cursus tincidunt erat. Aenean a mi sed nulla vehicula cursus. Nullam vitae hendrerit metus, lobortis commodo est. Etiam eleifend eleifend orci at malesuada.</p>
-        <h3 class="little_title_ayuda">Cuestión 2</h3>
+        <h3 class="little_title_gen">Cuestión 2</h3>
         <p class="paragraph">Donec quis orci ultrices tortor volutpat eleifend nec vel felis. Donec id quam vel lectus tristique laoreet non vitae ex. Proin auctor justo a convallis convallis. Etiam semper laoreet odio et mollis. Ut a sem tempor, consectetur orci faucibus, ultricies tellus. Duis in tortor libero. Duis ut erat vulputate ligula sodales consectetur. Vivamus auctor, leo et viverra ultricies, elit massa efficitur mi, vel efficitur dolor urna a ex. Nunc ac pulvinar felis. Vestibulum vehicula auctor faucibus.</p>
       </div>
-      <div id='menu_pag_ayuda'>
+      <div id='menu_pag_cuadro_texto'>
         <ul>
           <li><a href='#ayuda/1'>1</a></li>
           <li><a href='#ayuda/2'>2</a></li>
@@ -115,11 +115,11 @@
       </div>
     </script>
     <script type="text/template" id='ayuda_2'>
-      <div class="ayuda">
-        <h3 class="little_title_ayuda">Cuestión 3</h3>
+      <div class="cuadro_texto">
+        <h3 class="little_title_gen">Cuestión 3</h3>
         <p class="paragraph">Quisque vulputate massa a iaculis ornare. Nam at odio nec tortor mollis volutpat. Aenean sit amet lectus eget eros malesuada sollicitudin sed ac ex. Etiam fringilla ultrices ligula sed efficitur. Etiam eget porttitor massa, at eleifend massa. Suspendisse massa nulla, porta in turpis vel, lobortis egestas odio. Aenean lorem ex, blandit non est vitae, blandit molestie purus. Duis viverra justo ut quam hendrerit, quis blandit metus dignissim. Pellentesque consectetur rutrum lorem ac aliquam. Duis rhoncus lacus quis felis pretium, ac bibendum dolor faucibus. Ut mollis nunc vitae dapibus dictum. Aliquam metus sem, aliquet ac augue nec, scelerisque tristique ipsum. Aliquam in nulla diam. Pellentesque vel libero sit amet mi dapibus rhoncus. Sed libero diam, blandit sit amet felis sit amet, ornare aliquam lectus. Aenean et diam volutpat, tristique diam euismod, tincidunt quam.</p>
       </div>
-      <div id='menu_pag_ayuda'>
+      <div id='menu_pag_cuadro_texto'>
         <ul>
           <li><a href='#ayuda/1'>1</a></li>
           <li><a href='#ayuda/2'>2</a></li>
@@ -128,15 +128,78 @@
       </div>
     </script>
     <script type="text/template" id='ayuda_3'>
-      <div class="ayuda">
-        <h3 class="little_title_ayuda">Cuestión 4</h3>
+      <div class="cuadro_texto">
+        <h3 class="little_title_gen">Cuestión 4</h3>
         <p class="paragraph">Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam erat volutpat. Nunc sed metus eu sapien molestie pharetra. Sed accumsan pulvinar lacus eu cursus. Nunc in cursus ante, nec elementum felis. Integer mauris ipsum, scelerisque nec erat facilisis, ultricies eleifend magna. Nullam tristique, ante vitae vulputate interdum, mi dolor iaculis metus, eu volutpat arcu neque eget massa. Cras in magna at nisi accumsan facilisis non et erat. Quisque sit amet dui in turpis varius consequat. Nam sodales, purus sit amet sollicitudin volutpat, elit mauris placerat magna, ac blandit risus tortor non lorem. Praesent vel risus hendrerit, tincidunt libero a, facilisis felis. Aliquam nec felis at nulla tempus eleifend sit amet eget dolor. Aenean auctor magna sit amet finibus maximus.</p>
       </div>
-      <div id='menu_pag_ayuda'>
+      <div id='menu_pag_cuadro_texto'>
         <ul>
           <li><a href='#ayuda/1'>1</a></li>
           <li><a href='#ayuda/2'>2</a></li>
           <li><a href='#ayuda/3'>3</a></li>
+        </ul>
+      </div>
+    </script>
+    <!-- Plantilla para 'quienes somos' -->
+    <script type="text/template" id='quienesSomos'>
+      <div>
+        <p class="paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In arcu dui,
+            pulvinar rutrum fringilla elementum, sodales id tellus.
+            Duis pellentesque dolor in neque volutpat mattis.
+            Fusce tempus metus non quam pellentesque, vitae porta mauris malesuada.
+            Nullam mi lorem, sagittis vitae nulla quis, cursus tincidunt erat.
+            Aenean a mi sed nulla vehicula cursus. Nullam vitae hendrerit metus,
+            lobortis commodo est. Etiam eleifend eleifend orci at malesuada.
+        </p>
+      </div>
+    </script>
+    <!-- Plantilla para 'atención al cliente' -->
+    <script type="text/template" id='atencionAlCliente'>
+      <div>
+        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In arcu dui, pulvinar rutrum fringilla elementum, sodales id tellus. Duis pellentesque dolor in neque volutpat mattis. Fusce tempus metus non quam pellentesque, vitae porta mauris malesuada. Nullam mi lorem, sagittis vitae nulla quis, cursus tincidunt erat. Aenean a mi sed nulla vehicula cursus. Nullam vitae hendrerit metus, lobortis commodo est. Etiam eleifend eleifend orci at malesuada.</p>
+        <p class="paragraph">Donec quis orci ultrices tortor volutpat eleifend nec vel felis. Donec id quam vel lectus tristique laoreet non vitae ex. Proin auctor justo a convallis convallis. Etiam semper laoreet odio et mollis. Ut a sem tempor, consectetur orci faucibus, ultricies tellus. Duis in tortor libero. Duis ut erat vulputate ligula sodales consectetur. Vivamus auctor, leo et viverra ultricies, elit massa efficitur mi, vel efficitur dolor urna a ex. Nunc ac pulvinar felis. Vestibulum vehicula auctor faucibus.</p>
+      </div>
+    </script>
+    <!-- Plantillas con el contenido de los aspectos legales -->
+    <script type="text/template" id='legal_1'>
+      <div class="cuadro_texto">
+        <h3 class="little_title_gen">Cuestión 1</h3>
+        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In arcu dui, pulvinar rutrum fringilla elementum, sodales id tellus. Duis pellentesque dolor in neque volutpat mattis. Fusce tempus metus non quam pellentesque, vitae porta mauris malesuada. Nullam mi lorem, sagittis vitae nulla quis, cursus tincidunt erat. Aenean a mi sed nulla vehicula cursus. Nullam vitae hendrerit metus, lobortis commodo est. Etiam eleifend eleifend orci at malesuada.</p>
+        <h3 class="little_title_gen">Cuestión 2</h3>
+        <p class="paragraph">Donec quis orci ultrices tortor volutpat eleifend nec vel felis. Donec id quam vel lectus tristique laoreet non vitae ex. Proin auctor justo a convallis convallis. Etiam semper laoreet odio et mollis. Ut a sem tempor, consectetur orci faucibus, ultricies tellus. Duis in tortor libero. Duis ut erat vulputate ligula sodales consectetur. Vivamus auctor, leo et viverra ultricies, elit massa efficitur mi, vel efficitur dolor urna a ex. Nunc ac pulvinar felis. Vestibulum vehicula auctor faucibus.</p>
+      </div>
+      <div id='menu_pag_cuadro_texto'>
+        <ul>
+          <li><a href='#legal/1'>1</a></li>
+          <li><a href='#legal/2'>2</a></li>
+          <li><a href='#legal/3'>3</a></li>
+        </ul>
+      </div>
+    </script>
+    <script type="text/template" id='legal_2'>
+      <div class="cuadro_texto">
+        <h3 class="little_title_gen">Cuestión 3</h3>
+        <p class="paragraph">Quisque vulputate massa a iaculis ornare. Nam at odio nec tortor mollis volutpat. Aenean sit amet lectus eget eros malesuada sollicitudin sed ac ex. Etiam fringilla ultrices ligula sed efficitur. Etiam eget porttitor massa, at eleifend massa. Suspendisse massa nulla, porta in turpis vel, lobortis egestas odio. Aenean lorem ex, blandit non est vitae, blandit molestie purus. Duis viverra justo ut quam hendrerit, quis blandit metus dignissim. Pellentesque consectetur rutrum lorem ac aliquam. Duis rhoncus lacus quis felis pretium, ac bibendum dolor faucibus. Ut mollis nunc vitae dapibus dictum. Aliquam metus sem, aliquet ac augue nec, scelerisque tristique ipsum. Aliquam in nulla diam. Pellentesque vel libero sit amet mi dapibus rhoncus. Sed libero diam, blandit sit amet felis sit amet, ornare aliquam lectus. Aenean et diam volutpat, tristique diam euismod, tincidunt quam.</p>
+      </div>
+      <div id='menu_pag_cuadro_texto'>
+        <ul>
+          <li><a href='#legal/1'>1</a></li>
+          <li><a href='#legal/2'>2</a></li>
+          <li><a href='#legal/3'>3</a></li>
+        </ul>
+      </div>
+    </script>
+    <script type="text/template" id='legal_3'>
+      <div class="cuadro_texto">
+        <h3 class="little_title_gen">Cuestión 4</h3>
+        <p class="paragraph">Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam erat volutpat. Nunc sed metus eu sapien molestie pharetra. Sed accumsan pulvinar lacus eu cursus. Nunc in cursus ante, nec elementum felis. Integer mauris ipsum, scelerisque nec erat facilisis, ultricies eleifend magna. Nullam tristique, ante vitae vulputate interdum, mi dolor iaculis metus, eu volutpat arcu neque eget massa. Cras in magna at nisi accumsan facilisis non et erat. Quisque sit amet dui in turpis varius consequat. Nam sodales, purus sit amet sollicitudin volutpat, elit mauris placerat magna, ac blandit risus tortor non lorem. Praesent vel risus hendrerit, tincidunt libero a, facilisis felis. Aliquam nec felis at nulla tempus eleifend sit amet eget dolor. Aenean auctor magna sit amet finibus maximus.</p>
+      </div>
+      <div id='menu_pag_cuadro_texto'>
+        <ul>
+          <li><a href='#legal/1'>1</a></li>
+          <li><a href='#legal/2'>2</a></li>
+          <li><a href='#legal/3'>3</a></li>
         </ul>
       </div>
     </script>
