# detalle de producto con mongodb # falta gestionar descuentos con mongodb

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </script>
     <!-- Plantilla con los productos de la página de inicio -->
     <script type="text/template" id="listado_productos">
-      <li><a href="#catalogo/<%= titulo %>"><img class='item' id="<%= isbn %>" src="<%= imagen %>" alt="<%= titulo %>" width="110" height="110" data-isbn="<%= isbn %>"/></a></li>
+      <li><a href="#catalogo/<%= id %>"><img class='item' id="<%= isbn %>" src="<%= imagen %>" alt="<%= titulo %>" width="110" height="110" data-isbn="<%= isbn %>"/></a></li>
     </script>
     <!-- Plantilla de detalle de producto -->
     <script type="text/template" id="detalle_de_producto">
